--- a/app/src/main/res/drawable/voucher_details_grid_view_button_pressed.xml
+++ b/app/src/main/res/drawable/voucher_details_grid_view_button_pressed.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
   <stroke
       android:width="1dp"
-      android:color="@color/fake_black_1" />
+      android:color="@color/dark_blue" />
   <corners android:radius="6dp" />
-  <solid android:color="@color/fake_black_1" />
+  <solid android:color="@color/dark_blue" />
 </shape>
