--- a/app/src/main/res/layout/activity_transaction_detail.xml
+++ b/app/src/main/res/layout/activity_transaction_detail.xml
@@ -243,7 +243,7 @@
           app:layout_constraintTop_toBottomOf="@id/to_label"
           />
 
-      <com.asfoundation.wallet.ui.balance.evouchers.VoucherDetailView
+      <com.asfoundation.wallet.ui.balance.vouchers.VoucherTransactionDetailView
           android:id="@+id/voucher_details"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
