--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -164,9 +164,9 @@
   <color name="verify_wallet_example_code_background">#707070</color>
   <color name="verify_wallet_code_background">#afafaf</color>
 
-  <!-- E-Voucher Details -->
-  <color name="fake_black_1">#00223a</color>
-  <color name="fake_black_2">#00131f</color>
-  <color name="fake_black_3">#142735</color>
-  <color name="e_voucher_details_download_background_color">#efefef</color>
+  <!-- Voucher Details -->
+  <color name="dark_blue">#00223a</color>
+  <color name="cancel_dark_blue">#142735</color>
+  <color name="voucher_details_download_background_color">#efefef</color>
+  <color name="promotions_active_75_alpha">#bf00131f</color>
 </resources>
