--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -68,15 +68,10 @@
   <dimen name="backup_description_normal_text_size">14sp</dimen>
   <dimen name="backup_description_line_spacing_extra">6sp</dimen>
 
-  <!--E-Voucher Details -->
-  <dimen name="e_voucher_details_image_height">184dp</dimen>
-  <dimen name="e_voucher_details_diamonds_next_button_width">89dp</dimen>
-  <dimen name="e_voucher_details_download_now_text_size">10sp</dimen>
-  <dimen name="e_voucher_details_diamonds_cancel_button_width">100dp</dimen>
-  <dimen name="e_voucher_details_grid_view_height">112dp</dimen>
-  <dimen name="e_voucher_details_grid_view_horizontal_spacing">8dp</dimen>
-  <dimen name="e_voucher_details_grid_view_vertial_spacing">16dp</dimen>
-  <dimen name="e_voucher_details_download_app_container_height">128dp</dimen>
-  <dimen name="e_voucher_details_appcoins_text_view_width">72dp</dimen>
-  <dimen name="e_voucher_details_appcoins_text_view_height">18dp</dimen>
+  <!--Voucher Details -->
+  <dimen name="voucher_details_image_height">184dp</dimen>
+  <dimen name="voucher_details_grid_view_height">112dp</dimen>
+  <dimen name="voucher_details_grid_view_horizontal_spacing">8dp</dimen>
+  <dimen name="voucher_details_grid_view_vertical_spacing">16dp</dimen>
+  <dimen name="voucher_details_grid_button_height">48dp</dimen>
 </resources>
