--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -184,6 +184,11 @@
     <item name="android:textColor">@color/btn_text_enable_color</item>
   </style>
 
+  <style name="ButtonStyle.Alternative.LargePadding">
+    <item name="android:paddingStart">26dp</item>
+    <item name="android:paddingEnd">26dp</item>
+  </style>
+
   <style name="ButtonStyle.Dark" parent="ButtonStyle">
     <item name="android:background">@drawable/checkbox_dark_background</item>
     <item name="android:textColor">@color/checkbox_dark_text_color</item>
@@ -1131,7 +1136,7 @@
 
   <style name="ButtonStyle.Cancel" parent="Base.Widget.AppCompat.ImageButton">
     <item name="android:background">@color/transparent</item>
-    <item name="android:textColor">@color/fake_black_3</item>
+    <item name="android:textColor">@color/cancel_dark_blue</item>
     <item name="android:fontFamily">sans-serif-medium</item>
     <item name="android:textSize">14sp</item>
     <item name="android:paddingStart">@dimen/big_padding</item>
@@ -1142,36 +1147,64 @@
     <item name="textAllCaps">true</item>
   </style>
 
-  <style name="AppCoinsIconStyle" parent="Widget.AppCompat.TextView">
-    <item name="android:background">@drawable/e_voucher_appcoins_textview_background</item>
+  <style name="AppCoinsIconStyle" parent="TextAppearance.AppCompat.Body1.Roboto.Medium">
     <item name="android:textColor">@color/white</item>
-    <item name="android:fontFamily">sans-serif-medium</item>
     <item name="android:textSize">10sp</item>
-    <item name="android:paddingStart">5dp</item>
-    <item name="android:paddingTop">1dp</item>
+    <item name="android:lineSpacingExtra">1sp</item>
   </style>
 
-  <style name="Theme.EVoucherToolbar" parent="ThemeOverlay.AppCompat.Dark">
+  <style name="Theme.VoucherToolbar" parent="ThemeOverlay.AppCompat.Dark">
     <item name="titleTextColor">@color/white</item>
     <item name="android:background">@color/black</item>
     <item name="colorControlNormal">@color/white</item>
 
   </style>
 
-  <style name="EVoucherToolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+  <style name="VoucherToolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
     <item name="android:textSize">20sp</item>
     <item name="android:letterSpacing">0.09</item>
   </style>
 
-  <style name="EVoucher.AppTitle" parent="Widget.AppCompat.TextView">
+  <style name="Voucher.AppTitle" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
     <item name="android:textSize">18sp</item>
     <item name="android:textStyle">bold</item>
-    <item name="android:textColor">@color/fake_black_2</item>
+    <item name="android:letterSpacing">0.04</item>
+    <item name="android:lineSpacingExtra">3sp</item>
+    <item name="android:textColor">@color/promotions_active_background</item>
   </style>
 
-  <style name="EVoucher.AppBonus" parent="Widget.AppCompat.TextView">
-    <item name="android:textSize">18sp</item>
+  <style name="Voucher.AppBonus" parent="TextAppearance.AppCompat.Body1.Roboto.Medium">
+    <item name="android:textSize">14sp</item>
     <item name="android:textColor">@color/black</item>
+    <item name="android:letterSpacing">0.04</item>
+    <item name="android:lineSpacingExtra">5sp</item>
   </style>
 
+  <style name="Voucher.DownloadApp" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
+    <item name="android:textColor">@color/promotions_active_background</item>
+  </style>
+
+  <style name="Voucher.DownloadApp.Title">
+    <item name="android:textSize">16sp</item>
+  </style>
+
+  <style name="Voucher.DownloadApp.InstallGame">
+    <item name="android:textSize">12sp</item>
+  </style>
+
+  <style name="Voucher.DownloadApp.InstallGame.Bold">
+    <item name="android:textStyle">bold</item>
+  </style>
+
+  <style name="DarkButtonStyle">
+    <item name="android:textSize">10sp</item>
+    <item name="android:fontFamily">sans-serif-medium</item>
+    <item name="android:textColor">@color/dark_blue</item>
+    <item name="android:paddingStart">@dimen/big_padding</item>
+    <item name="android:paddingEnd">@dimen/big_padding</item>
+    <item name="android:letterSpacing">0.04</item>
+    <item name="android:lineSpacingExtra">1sp</item>
+    <item name="android:background">@drawable/voucher_download_app_button_background</item>
+    <item name="android:minHeight">32dp</item>
+  </style>
 </resources>
