--- a/app/src/main/res/layout/perks_and_vouchers_layout.xml
+++ b/app/src/main/res/layout/perks_and_vouchers_layout.xml
@@ -6,55 +6,26 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     >
-
-  <include
-      android:id="@+id/new_item_view"
-      layout="@layout/new_promotion_view"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="8dp"
-      android:layout_marginEnd="2dp"
-      app:layout_constraintBottom_toTopOf="@id/vouchers_button"
-      app:layout_constraintEnd_toEndOf="@id/vouchers_button"
-      app:layout_constraintTop_toTopOf="parent"
-      />
-
-  <RadioButton
-      android:id="@+id/vouchers_button"
-      style="@style/ButtonStyle.Dark"
-      android:layout_width="wrap_content"
-      android:layout_height="@dimen/button_height"
-      android:layout_marginStart="16dp"
-      android:layout_marginTop="8dp"
-      android:layout_marginEnd="16dp"
-      android:button="@null"
-      android:checked="true"
-      android:text="@string/promotions_vouhers_button"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      />
-
-  <RadioButton
-      android:id="@+id/perks_button"
-      style="@style/ButtonStyle.Dark"
-      android:layout_width="wrap_content"
-      android:layout_height="@dimen/button_height"
-      android:layout_marginStart="8dp"
-      android:button="@null"
-      android:text="@string/promotions_perks_button"
-      app:layout_constraintBottom_toBottomOf="@id/vouchers_button"
-      app:layout_constraintStart_toEndOf="@id/vouchers_button"
-      app:layout_constraintTop_toTopOf="@id/vouchers_button"
-      />
-
-  <androidx.constraintlayout.widget.Group
-      android:id="@+id/perks_vouchers_buttons"
+  <FrameLayout
+      android:id="@+id/header"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:visibility="invisible"
-      app:constraint_referenced_ids="vouchers_button, perks_button,new_item_view"
-      tools:visibility="visible"
-      />
+      android:orientation="vertical"
+      app:layout_constraintTop_toTopOf="parent"
+      >
+    <include
+        android:id="@+id/perks_vouchers_buttons"
+        layout="@layout/layout_perks_vouchers_buttons"
+        android:visibility="gone"
+        tools:visibility="visible"
+        />
+    <include
+        android:id="@+id/vouchers_text"
+        layout="@layout/layout_vouchers_text"
+        android:visibility="gone"
+        />
+  </FrameLayout>
+
   <androidx.viewpager2.widget.ViewPager2
       android:id="@+id/vouchers_perks_viewpager"
       android:layout_width="match_parent"
@@ -63,6 +34,6 @@
       android:layout_marginTop="16dp"
       android:orientation="horizontal"
       android:overScrollMode="never"
-      app:layout_constraintTop_toBottomOf="@id/vouchers_button"
+      app:layout_constraintTop_toBottomOf="@id/header"
       />
 </androidx.constraintlayout.widget.ConstraintLayout>
