--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -775,7 +775,7 @@
   <style name="Promotions.CardView" parent="Widget.MaterialComponents.CardView">
     <item name="cardBackgroundColor">@color/white</item>
     <item name="cardCornerRadius">6dp</item>
-    <item name="cardElevation">4dp</item>
+    <item name="cardElevation">1dp</item>
     <item name="cardUseCompatPadding">true</item>
   </style>
 
@@ -1125,5 +1125,13 @@
     <item name="android:fontFamily">sans-serif-medium</item>
     <item name="android:textAlignment">center</item>
     <item name="android:textSize">16sp</item>
+  </style>
+
+  <style name="VouchersListTitle" parent="TextAppearance.AppCompat.Body1.Roboto.Medium">
+
+  </style>
+
+  <style name="VouchersListSubTitle" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
+
   </style>
 </resources>
