--- a/app/src/main/res/layout/fragment_promotions.xml
+++ b/app/src/main/res/layout/fragment_promotions.xml
@@ -21,6 +21,7 @@
           android:layout_height="wrap_content"
           android:orientation="vertical"
           app:layout_constraintTop_toTopOf="parent"
+          tools:visibility="gone"
           >
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_promotions"
@@ -53,8 +54,10 @@
           android:layout_height="wrap_content"
           android:layout_marginTop="24dp"
           android:layout_marginEnd="8dp"
-          android:visibility="invisible"
+          android:visibility="gone"
           app:layout_constraintTop_toBottomOf="@id/top_half"
+          app:layout_goneMarginTop="16dp"
+          tools:visibility="visible"
           />
     </androidx.constraintlayout.widget.ConstraintLayout>
   </ScrollView>
