[APPC-2278] Removed not needed .png. Refactored promotion click mapping

--- a/app/src/main/res/layout/voucher_details_content_scrolling.xml
+++ b/app/src/main/res/layout/voucher_details_content_scrolling.xml
@@ -28,7 +28,7 @@
           android:layout_height="@dimen/voucher_details_image_height"
           android:scaleType="centerCrop"
           app:layout_constraintTop_toTopOf="parent"
-          tools:src="@drawable/free_fire"
+          tools:src="@drawable/ic_appc"
           />
 
       <LinearLayout
