--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1211,4 +1211,23 @@
     <item name="android:background">@drawable/voucher_download_app_button_background</item>
     <item name="android:minHeight">32dp</item>
   </style>
+
+  <style name="SkuButton">
+    <item name="android:layout_width">104dp</item>
+    <item name="android:layout_height">48dp</item>
+    <item name="android:background">@drawable/voucher_details_diamonds_button_drawable</item>
+    <item name="android:ellipsize">end</item>
+    <item name="android:fontFamily">sans-serif-medium</item>
+    <item name="android:letterSpacing">0.04</item>
+    <item name="android:lineSpacingExtra">2sp</item>
+    <item name="android:maxLines">2</item>
+    <item name="android:minHeight">48dp</item>
+    <item name="android:paddingStart">8dp</item>
+    <item name="android:paddingEnd">8dp</item>
+    <item name="android:textAllCaps">false</item>
+    <item name="android:textColor">@drawable/voucher_details_button_text_color</item>
+    <item name="autoSizeMaxTextSize">12sp</item>
+    <item name="autoSizeMinTextSize">9sp</item>
+    <item name="autoSizeTextType">uniform</item>
+  </style>
 </resources>
