[APPC-2240] Added ripple effect to buttons

--- a/app/src/main/res/layout/voucher_details_content_scrolling.xml
+++ b/app/src/main/res/layout/voucher_details_content_scrolling.xml
@@ -109,7 +109,7 @@
 
       <Button
           android:id="@+id/cancel_button"
-          style="@style/ButtonStyle.Cancel"
+          style="@style/CancelBorderlessButtonStyle.Voucher"
           android:layout_width="wrap_content"
           android:layout_height="@dimen/button_height"
           android:layout_marginEnd="32dp"
