--- a/app/src/main/res/drawable/voucher_download_app_button_background.xml
+++ b/app/src/main/res/drawable/voucher_download_app_button_background.xml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-  <stroke
-      android:width="1dp"
-      android:color="@color/dark_blue" />
-  <corners android:radius="16dp" />
-</shape>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="#c9c9c9">
+  <item android:id="@android:id/mask">
+    <shape android:shape="rectangle">
+      <corners android:radius="16dp" />
+      <solid android:color="#c9c9c9" />
+    </shape>
+  </item>
+  <!-- This is the background for your button -->
+  <item>
+    <shape android:shape="rectangle">
+      <stroke
+          android:width="1dp"
+          android:color="@color/dark_blue" />
+      <corners android:radius="16dp" />
+    </shape>
+  </item>
+</ripple>
