--- a/app/src/main/res/drawable/voucher_download_app_button_background.xml
+++ b/app/src/main/res/drawable/voucher_download_app_button_background.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#c9c9c9">
+    android:color="@color/ripple_dark_blue">
   <item android:id="@android:id/mask">
     <shape android:shape="rectangle">
       <corners android:radius="16dp" />
-      <solid android:color="#c9c9c9" />
+      <solid android:color="@color/ripple_dark_blue" />
     </shape>
   </item>
   <!-- This is the background for your button -->
