--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -166,6 +166,7 @@
 
   <!-- Voucher Details -->
   <color name="dark_blue">#00223a</color>
+  <color name="ripple_dark_blue">#4000223a</color>
   <color name="cancel_dark_blue">#142735</color>
   <color name="voucher_details_download_background_color">#efefef</color>
   <color name="promotions_active_75_alpha">#bf00131f</color>
