[APPC-2278] Small margin corrections

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1128,10 +1128,14 @@
   </style>
 
   <style name="VouchersListTitle" parent="TextAppearance.AppCompat.Body1.Roboto.Medium">
-
+    <item name="android:textSize">14sp</item>
+    <item name="android:letterSpacing">0.09</item>
+    <item name="android:textStyle">bold</item>
+    <item name="android:textColor">@color/black</item>
   </style>
 
   <style name="VouchersListSubTitle" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
-
+    <item name="android:textSize">12sp</item>
+    <item name="android:textColor">@color/black</item>
   </style>
 </resources>
