--- a/app/src/main/res/layout/fragment_promotions.xml
+++ b/app/src/main/res/layout/fragment_promotions.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         >
       <FrameLayout
-          android:id="@+id/top_half"
+          android:id="@+id/promotions_view"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
@@ -54,7 +54,7 @@
           android:layout_marginTop="24dp"
           android:layout_marginEnd="8dp"
           android:visibility="gone"
-          app:layout_constraintTop_toBottomOf="@id/top_half"
+          app:layout_constraintTop_toBottomOf="@id/promotions_view"
           app:layout_goneMarginTop="16dp"
           tools:visibility="visible"
           />
