--- a/app/src/main/res/layout/layout_locked_promotions_with_vouchers.xml
+++ b/app/src/main/res/layout/layout_locked_promotions_with_vouchers.xml
@@ -25,9 +25,9 @@
         style="@style/LockedPromotionsStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="@dimen/half_large_margin"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginEnd="@dimen/half_large_margin"
         android:gravity="center"
         android:text="@string/promotions_empty_first_purchase_body"
         app:layout_constraintEnd_toEndOf="parent"
