--- a/app/src/main/res/layout/layout_voucher_code_detail.xml
+++ b/app/src/main/res/layout/layout_voucher_code_detail.xml
@@ -35,9 +35,11 @@
         style="@style/Transactions.Details.Vouchers.CodeText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="58dp"
         android:layout_marginEnd="16dp"
+        android:ellipsize="end"
         android:gravity="center"
+        android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/copy_code"
         app:layout_constraintStart_toStartOf="parent"
