--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1241,13 +1241,13 @@
 
   <style name="VouchersListTitle" parent="TextAppearance.AppCompat.Body1.Roboto.Medium">
     <item name="android:textSize">14sp</item>
-    <item name="android:letterSpacing">0.09</item>
+    <item name="android:letterSpacing">0.01</item>
     <item name="android:textStyle">bold</item>
     <item name="android:textColor">@color/black</item>
   </style>
 
   <style name="VouchersListSubTitle" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
     <item name="android:textSize">12sp</item>
-    <item name="android:textColor">@color/black</item>
+    <item name="android:textColor">@color/vouchers_subtitle</item>
   </style>
 </resources>
