Added user-id support.

--- a/skills/src/main/res/layout/fragment_skills.xml
+++ b/skills/src/main/res/layout/fragment_skills.xml
@@ -14,6 +14,15 @@
       app:layout_constraintTop_toTopOf="parent"
       />
 
+  <TextView
+      android:id="@+id/error_text"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:visibility="gone"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      />
+
   <ProgressBar
       android:id="@+id/progress_bar"
       style="?android:attr/progressBarStyleLarge"
