--- a/app/src/main/res/layout/item_appcoins_application.xml
+++ b/app/src/main/res/layout/item_appcoins_application.xml
@@ -1,90 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="260dp"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
-    android:background="@drawable/background_card"
     android:elevation="4dp"
+    app:cardBackgroundColor="@color/black"
+    app:cardCornerRadius="8dp"
     >
 
-  <ImageView
-      android:id="@+id/featured_graphic"
+  <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
-      android:layout_height="16dp"
-      app:layout_constraintTop_toTopOf="parent"
-      />
-
-  <ImageView
-      android:id="@+id/app_icon"
-      android:layout_width="45dp"
-      android:layout_height="45dp"
-      android:layout_marginStart="@dimen/big_padding"
-      android:layout_marginTop="@dimen/big_margin"
-      android:layout_marginBottom="@dimen/big_padding"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintHorizontal_bias="0"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/featured_graphic"
-      tools:src="@drawable/ic_appc_tokens_logo"
-      />
-
-  <TextView
-      android:id="@+id/app_name"
-      style="@style/Base.TextAppearance.AppCompat.Subhead"
-      android:layout_width="160dp"
       android:layout_height="wrap_content"
-      android:layout_marginStart="16dp"
-      android:layout_marginEnd="4dp"
-      android:ellipsize="end"
-      android:singleLine="true"
-      app:layout_constraintBottom_toTopOf="@id/app_rating"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0"
-      app:layout_constraintStart_toEndOf="@id/app_icon"
-      app:layout_constraintTop_toTopOf="@id/app_icon"
-      tools:text="app name"
-      />
+      android:background="@color/transparent"
+      >
 
-  <TextView
-      android:id="@+id/app_rating"
-      style="@style/Base.TextAppearance.AppCompat.Caption"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="4dp"
-      android:drawableStart="@drawable/ic_star_yellow_24dp"
-      app:layout_constraintBottom_toBottomOf="@id/app_icon"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0"
-      app:layout_constraintStart_toStartOf="@id/app_name"
-      app:layout_constraintTop_toBottomOf="@id/app_name"
-      tools:text="4.7"
-      />
+    <ImageView
+        android:id="@+id/featured_graphic"
+        android:layout_width="match_parent"
+        android:layout_height="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
-  <TextView
-      android:id="@+id/share_title"
-      style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginEnd="4dp"
-      android:layout_marginBottom="8dp"
-      android:text="@string/askafriend_share_button"
-      android:textColor="@color/black_87_alpha"
-      android:textSize="12sp"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      />
+    <ImageView
+        android:id="@+id/app_icon"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="@dimen/big_padding"
+        android:layout_marginTop="@dimen/big_margin"
+        android:layout_marginBottom="@dimen/big_padding"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/featured_graphic"
+        tools:src="@drawable/ic_appc_tokens_logo"
+        />
 
-  <ImageView
-      android:id="@+id/share_icon"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginEnd="4dp"
-      app:layout_constraintBottom_toBottomOf="@+id/share_title"
-      app:layout_constraintEnd_toStartOf="@+id/share_title"
-      app:layout_constraintTop_toTopOf="@+id/share_title"
-      app:srcCompat="@drawable/ic_share_black"
-      />
+    <TextView
+        android:id="@+id/app_name"
+        style="@style/Base.TextAppearance.AppCompat.Subhead"
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="4dp"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@id/app_rating"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toEndOf="@id/app_icon"
+        app:layout_constraintTop_toTopOf="@id/app_icon"
+        tools:text="app name"
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/app_rating"
+        style="@style/Base.TextAppearance.AppCompat.Caption"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:textColor="@color/white"
+        app:drawableStartCompat="@drawable/ic_star_yellow_24dp"
+        app:drawableTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="@id/app_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="@id/app_name"
+        app:layout_constraintTop_toBottomOf="@id/app_name"
+        tools:text="4.7"
+        />
+
+    <TextView
+        android:id="@+id/share_title"
+        style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/askafriend_share_button"
+        android:textColor="@color/black_87_alpha"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <ImageView
+        android:id="@+id/share_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
+        app:layout_constraintBottom_toBottomOf="@+id/share_title"
+        app:layout_constraintEnd_toStartOf="@+id/share_title"
+        app:layout_constraintTop_toTopOf="@+id/share_title"
+        app:srcCompat="@drawable/ic_share_black"
+        />
+
+  </androidx.constraintlayout.widget.ConstraintLayout>
+</com.google.android.material.card.MaterialCardView>
+
