--- a/app/src/main/res/layout/item_card_notifications_list.xml
+++ b/app/src/main/res/layout/item_card_notifications_list.xml
@@ -5,10 +5,18 @@
     android:id="@+id/referral_notifications_list"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="16dp"
     android:clipChildren="false"
     android:clipToPadding="false"
     >
+
+  <View
+      android:id="@+id/appbar_bg"
+      android:layout_width="match_parent"
+      android:layout_height="138dp"
+      android:background="@drawable/appbar_background_rounded"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      />
 
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/recycler_view"
