--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -854,6 +854,28 @@
     <item name="android:lineSpacingExtra">10sp</item>
   </style>
 
+  <style name="BottomSheetEtherTransactionTitle" parent="TextAppearance.AppCompat.Body1.Roboto.Medium">
+    <item name="android:textColor">@color/tooltip_black</item>
+    <item name="android:textSize">18sp</item>
+  </style>
+
+  <style name="BottomSheetEtherTransactionSubtitle" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
+    <item name="android:textColor">@color/tooltip_black</item>
+    <item name="android:textSize">14sp</item>
+  </style>
+
+  <style name="BottomSheetEtherTransactionHash" parent="TextAppearance.AppCompat.Body1.Roboto.Medium">
+    <item name="android:textColor">@color/etherscan_transaction_border</item>
+    <item name="android:textSize">12sp</item>
+    <item name="android:lineSpacingExtra">2sp</item>
+  </style>
+
+  <style name="BottomSheetEtherTransactionClipboard" parent="TextAppearance.AppCompat.Body1.Roboto.Medium">
+    <item name="android:textColor">@color/etherscan_transaction_clipboard</item>
+    <item name="android:textSize">12sp</item>
+    <item name="textAllCaps">true</item>
+  </style>
+
   <style name="BillingAddress.Title" parent="TextAppearance.AppCompat.Body1.Roboto.Medium">
     <item name="android:textColor">#000000</item>
     <item name="android:textSize">14sp</item>
