--- a/app/src/main/res/layout/item_appcoins_application_list.xml
+++ b/app/src/main/res/layout/item_appcoins_application_list.xml
@@ -8,15 +8,6 @@
     android:clipToPadding="false"
     >
 
-  <View
-      android:id="@+id/appbar_bg"
-      android:layout_width="match_parent"
-      android:layout_height="138dp"
-      android:background="@drawable/appbar_background_rounded"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      />
-
   <TextView
       android:id="@+id/title"
       android:layout_width="wrap_content"
@@ -42,14 +33,15 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="@id/title"
       />
-  <androidx.recyclerview.widget.RecyclerView
-      android:id="@+id/recycler_view"
+
+  <ViewStub
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
-      android:nestedScrollingEnabled="false"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/title"
+      android:inflatedId="@+id/recycler_view"
       />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
