--- a/app/src/main/res/layout/item_card_notifications_list.xml
+++ b/app/src/main/res/layout/item_card_notifications_list.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/referral_notifications_list"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,24 +8,13 @@
     android:clipToPadding="false"
     >
 
-  <View
-      android:id="@+id/appbar_bg"
-      android:layout_width="match_parent"
-      android:layout_height="138dp"
-      android:background="@drawable/appbar_background_rounded"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      />
-
-  <androidx.recyclerview.widget.RecyclerView
-      android:id="@+id/recycler_view"
+  <ViewStub
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:nestedScrollingEnabled="false"
+      android:inflatedId="@+id/recycler_view"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      tools:listitem="@layout/item_card_notification"
       />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
