--- a/app/src/main/res/layout/fingerprint_tooltip.xml
+++ b/app/src/main/res/layout/fingerprint_tooltip.xml
@@ -68,11 +68,12 @@
       android:id="@+id/arrow_up_tip"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginTop="20dp"
       android:layout_marginEnd="8dp"
       android:elevation="1dp"
       android:src="@drawable/ic_tooltip_arrow_up"
       app:layout_constraintEnd_toEndOf="@id/fingerprint_tooltip"
-      app:layout_constraintTop_toBottomOf="@id/icon"
+      app:layout_constraintTop_toTopOf="parent"
       />
   <ImageView
       android:id="@+id/icon"
